adding style changes to mobile

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -131,8 +131,8 @@
                            </div>
                         </div>
 
-                        <!--=================Tim's Section==============================
-                      ==================================================================== -->
+                        <!--=================Tim's Section==========================-->
+
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(2)" class="hover-shadow preview">
                             <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
@@ -153,11 +153,11 @@
                               <p class="text-third">Engineer</p>
                             </div>
                           </div>
-                           <!-- <img src="../public/img/tim.png" onclick="openLightbox();toSlide(2)" class="hover-shadow preview" alt="Tim." /> -->
                         </div>
 
-                        <!--=================Liam's Section==============================
-                      ==================================================================== -->
+
+                        <!--=================Liam's Section==========================-->
+
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(3)" class="hover-shadow preview">
                             <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.png">
@@ -180,8 +180,9 @@
                           </div>
                         </div>
 
-                        <!--=================Matt's Section==============================
-                      ==================================================================== -->
+
+                        <!--=================Matt's Section========================= -->
+
                        </div>
                         <div class="row m-4">
                           <div class="col">
@@ -204,11 +205,11 @@
                                 <p class="text-third">Business Dev Analyst</p>
                               </div>
                             </div>
-                             <!-- <img src="../public/img/matt.png" onclick="openLightbox();toSlide(4)" class="hover-shadow preview" alt="Matt" /> -->
                         </div>
 
-                        <!--=================Sloan's Section==============================
-                      ==================================================================== -->
+
+                        <!--=================Sloan's Section============================== -->
+
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(5)" class="hover-shadow preview">
                             <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.png">
@@ -490,11 +491,7 @@
       </div> <!-- end of desktop main container -->
 
 
-      <!-- ====================================================================
-      =========================================================================
-      ==================beginning of main mobile view container ===============
-    =================================================================================
-  ==================================================================================-->
+      <!-- =====================================================================beginning of main mobile view container =============================================================-->
 
       <!-- beginning of main mobile view container -->
       <section class="mobile-main">
@@ -502,7 +499,7 @@
              <header class="text-gray-700 body-font ">
                  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                    <a href="/" class="flex items-center mb-4 md:mb-0">
-                     <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                     <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
                    </a>
                    <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                      <a href="/about" class="mr-5 hover:text-gray-900">About</a>
@@ -515,7 +512,7 @@
                  </div>
              </header>
              <hr class="-mt-4">
-             <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl uppercase">ABOUT</h1>
+             <h1 class="text-3xl text-center tracking-wider p-2 mt-48 font-sans font-black uppercase">ABOUT</h1>
              <hr class="coverHr w-1/4 center mx-auto">
              <div class="tracking-widest text-center pt-1">
                <p>Learn more about VINCI's</p>
@@ -523,7 +520,7 @@
              </div>
           </section>
           <section class="panel bg-secondary">
-              <section class="lg:flex mb-4 ">
+              <section class="overflow-x-auto lg:flex mb-4 ">
                  <div class="lg:w-3/5 lg:ml-20 lg:m-2 mt-6 p-6 lg:pt-14">
                      <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
                          A Note From VINCI
@@ -572,7 +569,7 @@
            <section class="text-gray-700 body-font">
                  <div class="container py-20 mx-auto">
                    <div class="lg:flex lg:flex-col sm:block text-center w-full mb-20  pr-8 pl-4 ">
-                   <!--Come back here later to practice responsive-->
+                   <!--Come back here later to p ractice responsive-->
                    <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-primary font-sans">Our Team</h1>
                      <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary">Click an image to learn more about our team members.</p>
                    </div>
