--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -114,13 +114,30 @@
 
      <!-- beginning of main mobile view container -->
      <section class="mobile-main">
-       <section class="panel first">
-         <h1>Hi mobile view!</h1>
-       </section>
-       <section class="panel second">
-         <h1>Panel 2</h1>
-       </section>
-
+       <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+         <header class="text-gray-700 body-font ">
+             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+               <a href="/" class="flex items-center mb-4 md:mb-0">
+                 <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
+               </a>
+               <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                 <a href="/about" class="mr-5 hover:text-gray-900">About</a>
+                 <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
+                 <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
+                 <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
+                 <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
+                 <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+               </nav>
+             </div>
+         </header>
+         <hr class="-mt-4">
+         <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold">CONTACT</h1>
+         <div class="tracking-widest text-left p-4 mt-10">
+           <p>Have any questions?</p>
+           <p>Drop us a message.</p>
+           <p>Book a demo.</p>
+         </div>
+        </section>
      </section>   <!-- end of mobile container -->
 
     </section> <!-- end of panel container -->
