--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -62,7 +62,7 @@
     ​
            <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-sm" href="/services">Learn about our services</a>
     ​
-    ​       <p class="down-arrow sm:text-4xl sm:my-12 md:my-32">⌄</p>
+    ​       <p class="down-arrow text-4xl sm:my-12 md:my-32">⌄</p>
           </section>
 
         </section>
@@ -351,7 +351,7 @@
               <hr class="mt-4 w-3/4 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-black -mb-16 -mt-4 text-2xl "> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-black -mb-16 -mt-4 text-3xl "> WITH A WORLD OF YOUR OWN
               <hr class=" w-3/4 mx-auto mt-2 mb-10">
             </h1>
            <h3 class="font-sans pt-12 sm:my-8 text-xl mb-24">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
