--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -192,15 +192,208 @@
         </div>  <!-- end of desktop main container -->
 
 
-       <!-- beginning of main mobile view container -->
+       <!--================================================================================================================================================================
+       ===================================================== beginning of main mobile view container ======================================================================
+     -=======================================================================================================================================================================  -->
        <section class="mobile-main">
-         <section class="panel first">
-           <h1>Hi mobile view!</h1>
-         </section>
-         <section class="panel second">
-           <h1>Panel 2</h1>
-         </section>
+         <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
+           <header class="text-gray-700 body-font ">
+               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                 <a href="/" class="flex items-center mb-4 md:mb-0">
+                   <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                 </a>
+                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                   <a href="/about" class="mr-5 hover:text-gray-900">About</a>
+                   <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
+                   <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
+                   <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
+                   <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
+                   <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+                 </nav>
+               </div>
+           </header> 
+           <hr class="-mt-4">
+             <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold">PARTNERS</h1>
+             <div class="tracking-widest text-left p-4 mt-10">
+               <p>See how VINCI is changing </p>
+               <p>training today.</p>
+             </div>
+          </section>
 
+          <!-- - - - - - - - - Airforce ---------------->
+          <section class="mb-4 panel background first">
+             <section class="text-primary body-font">
+               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
+               <section class="text-gray-700 body-font">
+                  <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
+                    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
+                       <!--EMPTY DIV FOR SPACE -->
+                    </div>
+                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                      <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                        <span>Client</span>
+                        <span class="ml-48">Platform </span>
+                      </h2>
+
+                      <p class="mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
+                        <br><br>
+                       VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
+                      <div class="flex justify-center">
+                        <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Case Study</button>
+                        <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 text-lg">Learn More</button>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+             </section>
+          </section>
+
+          <!-- - - - - - - - - WIND TURBINES ---------------->
+          <section class="mb-4 panel background second">
+             <section class="text-primary body-font">
+               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
+               <section class="text-gray-700 body-font">
+                  <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
+                    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
+                      <img class="object-cover object-center rounded p-4" alt="" src="">
+                    </div>
+                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                      <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                        <span>Client </span>
+                        <span class="hidden lg:inline-block ml-48">Platform </span>
+                      </h2>
+                      <p class="mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
+                      <div class="flex justify-center">
+                        <button class="inline-flex text-white border-solid border-2 py-2  px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SGRE</button>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+             </section>
+          </section>
+
+          <!-- - - - - - - - - Soldier Training ---------------->
+           <section class="mb-4 panel background third">
+             <section class="text-primary body-font">
+               <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
+               <section class="text-gray-700 body-font">
+                  <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
+                    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
+                      <img class="object-cover object-center rounded" alt="" src="">
+                    </div>
+                    <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                      <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
+                        <span class="hidden lg:inline-block ml-48">Platform </span>
+                      </h1>
+                      <p class="mb-8 leading-relaxed text-primary">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
+                       <br><br>
+                      Please contact us directly for more information.</p>
+                      <div class="flex justify-center">
+                        <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg mt-2">Learn about Natick Solider Research</button>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+             </section>
+          </section>
+
+          <!-- - - - - - - - - SafetyDNA VR ---------------->
+            <section class="mb-4 panel background fourth">
+              <section class="text-primary body-font">
+                <h1 class="text-primary font-semibold text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
+                <section class="text-gray-700 body-font">
+                   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
+                     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
+                       <img class="object-cover object-center rounded" alt="" src="">
+                     </div>
+                     <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
+                         <span class="hidden lg:inline-block ml-48">Platform </span>
+                       </h1>
+                       <p class="mb-8 leading-relaxed text-primary">
+                         Teaching personal safety in the automobile manufacturing industry is a difficult task, but it is a deparately needed one. Every year, thousands of Americans are injured on manufacturing floors due to largely preventable causes.
+                         <br> <br>
+                         Working with Select Int., VINCI helped prototype a VR version of their SAFETYDNA workplace safety training; workers can now get the experience of being injured due to unsafe actions in VR without the actual physical consequences. By doing this, the principles of SafetyDNA can be deeply embedded into workers’ minds, making them remember safety traits better on real-world lines.
+                        </p>
+                       <div class="flex justify-center">
+                         <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SafetyDNA</button>
+                       </div>
+                     </div>
+                   </div>
+                 </section>
+              </section>
+           </section>
+
+           <!-- - - - - - - - - Footer ---------------->
+           <section class="bg-secondary panel">
+              <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+                <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+                <div class="flex flex-col justify-center mt-24">
+                   <a class="flex flex-col justify-center" href="/blogs">
+                     <button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
+                   </a>
+                   <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                   <a class="flex flex-col justify-center" href="/contact">
+                   <button class=" w-2/3 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Reach Out To Us</button>
+                   </a>
+                </div>
+                <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+                  <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                    <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+                  </div>
+                  <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                    <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                      <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                      <nav class="list-none mb-10 -mt-24">
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                        </li>
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                        </li>
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                        </li>
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+                        </li>
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                        </li>
+                        <li>
+                          <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/contact">CONTACT</a>
+                        </li>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-gray-200">
+                  <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+                    <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+                      <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+                    </p>
+                    <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                      <a class="text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                          <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                        </svg>
+                      </a>
+                      <a class="ml-3 text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                          <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                        </svg>
+                      </a>
+                      <a class="ml-3 text-gray-500">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                          <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                          <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                        </svg>
+                      </a>
+                    </span>
+                  </div>
+                </div>
+              </footer>
+           </section>
        </section>   <!-- end of mobile container -->
 
       </section> <!-- end of panel container -->
