--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -13,17 +13,10 @@
   <body class="text-primary bg-secondary font-serif">
     <section id="container">
       <div class="main-wrapper">
+
+        <!--================== NAV SECTION ==================-->
+
         <section class="panel hero-img text-2xl">
-
-          <!--==================
-           NAV SECTION
-          ==================-->
-          <style media="screen">
-            h1, h2, h3, h4, h5, h6 {
-              font-family: "Montserrat", sans-serif !important;
-            }
-          </style>
-
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0">
@@ -40,34 +33,28 @@
               </div>
           </header>
           <hr class="-mt-4">
+          <style media="screen">
+            h1, h2, h3, h4, h5, h6 {
+              font-family: "Montserrat", sans-serif !important;
+            }
+          </style>
 
-
-          <!--===================
-           HERO SECTION CONTENTS
-          =====================-->
-          <!-- <section class="contents mt-24 w-full p-4 absolute">
-         -->
+          <!--=================== HERO SECTION CONTENTS =====================-->
          <section class="">
-              <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
               <h1 class="text-4xl uppercase text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">Careers
               </h1>
               <hr class="coverHr w-1/4 center mx-auto">
               <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
                <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
-              <!-- <img src="" alt=""> -->
           </section>
         </section>
 
-        <!--==================
-         CAREERS INFO SECTION
-        ==================-->
+        <!--================== CAREERS INFO SECTION ==================-->
         <section class="panel bg-secondary h-full">
           <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
               <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
                 <hr class="mt-4 w-1/6 py-2 mb-20">
               </h1>
-
-              <!-- <hr class="w-3/4" style="border-color:#7C7C7C;"> -->
               <section class="bg-secondary grid grid-cols-3 border">
                 <h3 class="w-1/3 col-span-1">Position</h3>
                 <h3 class="w-1/3 col-span-1">Type</h3>
@@ -156,14 +143,162 @@
         </section>
       </div>  <!-- end of desktop main container -->
 
-
-     <!-- beginning of main mobile view container -->
+      <!--================================================================================================================================================================
+      ===================================================== beginning of main mobile view container ======================================================================
+    -=======================================================================================================================================================================  -->
      <section class="mobile-main">
-       <section class="panel first">
-         <h1>Hi mobile view!</h1>
+       <section class="panel hero-img text-2xl">
+         <header class="text-gray-700 body-font ">
+             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+               <a href="/" class="flex items-center mb-4 md:mb-0">
+                 <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
+               </a>
+               <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                 <a href="/about" class="mr-5 hover:text-gray-900">About</a>
+                 <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
+                 <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
+                 <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
+                 <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
+                 <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+               </nav>
+             </div>
+         </header>
+         <hr class="-mt-4">
+         <style media="screen">
+           h1, h2, h3, h4, h5, h6 {
+             font-family: "Montserrat", sans-serif !important;
+           }
+         </style>
+
+         <!--=================== HERO SECTION CONTENTS =====================-->
+        <section class="">
+             <h1 class="text-3xl text-center tracking-wider p-2 mt-48 font-sans font-black uppercase">Careers
+             </h1>
+             <hr class="coverHr w-1/4 center mx-auto">
+             <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
+         </section>
        </section>
-       <section class="panel second">
-         <h1>Panel 2</h1>
+
+  <!--================== CAREERS INFO SECTION ==================-->
+       <section class="panel bg-secondary h-full">
+         <section class="bg-secondary text-2xl sm:p-12 overflow-x-auto">
+             <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
+               <hr class="mt-4 w-1/4 py-2 mb-20">
+             </h1>
+             <section class="bg-secondary grid grid-cols-3 border">
+               <h3 class="w-1/3 col-span-1">Position</h3>
+               <h3 class="w-1/3 col-span-1">Type</h3>
+               <h3 class="w-1/3 col-span-1">Location</h3>
+               <details class="overflow-x-auto col-span-3 bg-secondary" closed>
+                 <summary>Business Development - Internship - Boston, MA</summary>
+                 <h4>Business Development Internship</h4>
+                 <p style="color:#7C7C7C;">
+                   VINCI is looking to expand its presence and increase deal flow with its target industries.
+                 </p>
+                 <p style="color:#7C7C7C;">
+                   A Business Development Analyst (BDA) will assist the Business Development (BD) team with researching key market and geopolitical conditions. Collected information will be used to grow VINCI's customer base while ensuring operations are adjusted accordingly.
+                 </p>
+                 <p style="color:#7C7C7C;">
+                   In addition, the BDA will assist VINCI's team with writing responses to RFPs, in addition to budgeting, marketing, and other Business Development Activities.
+                 </p>
+
+                 <h4>Breakdown of responsibilities</h4>
+                 <ul class="resp">
+                   <li style="color:#7C7C7C;">> Analyze and create reports on current market conditions and players within VINCI's industry segments</li>
+                   <br>
+                   <li style="color:#7C7C7C;"> > Write Responses to RFPs for target industries</li>
+                   <br>
+                   <li style="color:#7C7C7C;">> Update and manage the company's internal CRM tools (or create/use new CRM tools) to grow its base of leads</li>
+                 </ul>
+               </details>
+               <details class="col-span-3"  closed>
+                 <summary>N/A - Part Time - Boston, MA</summary>
+               </details>
+               <details class="col-span-3"  closed>
+                 <summary>N/A - Part Time - Boston, MA</summary>
+               </details>
+               <details class="col-span-3"  closed>
+                 <summary>N/A - Part Time - Boston, MA</summary>
+               </details>
+               <details class="col-span-3"  closed>
+                 <summary>N/A - Part Time - Boston, MA</summary>
+               </details>
+               <details class="col-span-3"  closed>
+                 <summary>N/A - Part Time - Boston, MA</summary>
+               </details>
+             </section>
+         </section>
+       </section>
+
+       <!-- - - - - - - - - Footer ---------------->
+       <section class="bg-secondary panel">
+          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+            <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+            <div class="flex flex-col justify-center mt-24">
+               <a class="flex flex-col justify-center" href="/blogs">
+                 <button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
+               </a>
+               <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+               <a class="flex flex-col justify-center" href="/contact">
+               <button class=" w-2/3 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Reach Out To Us</button>
+               </a>
+            </div>
+            <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+              <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+              </div>
+              <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                  <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                  <nav class="list-none mb-10 -mt-24">
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/contact">CONTACT</a>
+                    </li>
+                  </nav>
+                </div>
+              </div>
+            </div>
+            <div class="bg-gray-200">
+              <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+                <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+                  <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+                </p>
+                <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                  <a class="text-gray-500">
+                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                    </svg>
+                  </a>
+                  <a class="ml-3 text-gray-500">
+                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                    </svg>
+                  </a>
+                  <a class="ml-3 text-gray-500">
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                      <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                    </svg>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </footer>
        </section>
 
      </section>   <!-- end of mobile container -->
