desktop view mostly finished

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -15,15 +15,14 @@
       <div class="main-wrapper">
 
 
-        <section class="hero-section panel text-center h-screen w-full">
-          <!--==================
-           NAV SECTION
-          ==================-->
 
+    <!--================== NAV SECTION ==================-->
+
+        <section class="hero-section panel text-center h-screen w-full">
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
                 <a href="/" class="flex items-center mb-4 md:mb-0  z-10">
-                  <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="/about" class="mr-5 hover:text-gray-900">About</a>
@@ -37,9 +36,7 @@
           </header>
           <hr class="-mt-4">
 
-      <!--==================
-       HERO SECTION
-      ==================-->
+      <!--================== HERO SECTION ==================-->
         <style media="screen">
           h1, h2, h3, h4, h5, h6 {
             font-family: "Montserrat", sans-serif !important;
@@ -55,7 +52,7 @@
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-black -mb-20 -mt-6 text-2xl md:text-4xl"> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-4xl"> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
            <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
@@ -68,13 +65,11 @@
         </section>
 
 
-      <!--==================
-       INTRO SECTION
-      ==================-->
+      <!--==================  INTRO SECTION ==================-->
       <section class="panel bg-secondary">
           <section class="lg:flex mb-4 ">
              <div class="w-3/5 ml-20 m-2 mt-16 p-6 pt-14">
-                 <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
+                 <h2 class ="text-primary font-medium text-3xl text-left tracking-wider font-sans">
                      Codex: A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
@@ -101,7 +96,7 @@
          <section class="text-gray-700 body-font">
            <div class="container px-5 mt-16 mx-auto">
              <div class="text-center mb-20">
-               <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
+               <h1 class=" text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                <div class="flex mt-6 justify-center">
                  <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
                </div>
@@ -156,19 +151,16 @@
              </div>
            </div>
          </section>
-
        </section>
      </section>
 
 
+<!--============== Partners Section =======================-->
       <section class="panel">
-
         <section class="partnersBlock h-screen w-full mb-64">
-
-
           <section class="text-gray-700 body-font bg-secondary">
             <div class="container px-5 mx-auto">
-              <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold uppercase">Partners</h2>
+              <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
               <div class="mt-2 md:flex lg:flex-wrap lg:mt-16">
                 <div id="" class=" p-12 hover:bg-red-800">
                   <div class="border-2 border-gray-200 rounded-lg overflow-hidden">
@@ -204,34 +196,27 @@
         </section>
       </section>
 
-
+      <!--==================  SPOTLIGHT SECTION ==================-->
       <section class="panel">
-        <!--==================
-         SPOTLIGHT SECTION
-        ==================-->
-
         <section class="panel spotlight h-screen w-full">
-          <h1 class="text-center text-3xl mt-32 uppercase font-sans font-black">Spotlight</h1>
-          <section class="spot-container flex justify-center p-12">
-            <!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
+          <h1 class="text-center text-4xl mt-16 mb uppercase font-sans font-medium z-30 relative">Spotlight</h1>
+          <section class="spot-container flex justify-center p-4">
 
-            <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
-
-
+            <!-- videoWrapper used for width and height of video in panel css -->
+            <div class="videoWrapper">
+                <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
+            </div>
           </section>
         </section>
       </section>
 
 
 
-      <!--==================
-       FOOTER/CONTACT SECTION
-      ==================-->
+      <!--================== FOOTER/CONTACT SECTION ==================-->
       <section class="panel">
-
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center text-4xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
                 <a class="flex flex-col justify-center" href="/blogs">
                   <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
@@ -299,16 +284,13 @@
            </footer>
         </section>
       </section>
-      <!-- end of main section container -->
-
+                  <!-- end of main section container -->
         </div>
 
 
-      <!-- ====================================================================
-      =========================================================================
-      ==================beginning of main mobile view container ===============
-    =================================================================================
-  ==================================================================================-->
+      <!-- ==================================================================== ==================================================
+      =========================================beginning of main mobile view container ===========================================
+    ==============================================================================================================================-->
 
       <section class="mobile-main">
         <section class="hero-section panel text-center h-screen w-full">
@@ -351,7 +333,7 @@
               <hr class="mt-4 w-3/4 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-black -mb-16 -mt-4 text-3xl "> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-bold -mb-16 -mt-4 text-3xl "> WITH A WORLD OF YOUR OWN
               <hr class=" w-3/4 mx-auto mt-2 mb-10">
             </h1>
            <h3 class="font-sans pt-12 sm:my-8 text-xl mb-24">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
@@ -370,7 +352,7 @@
       <section class="panel bg-secondary">
           <section class="sm:block lg:flex mb-4">
              <div class="lg:w-3/5 lg:ml-20 m-2 mt-12 p-6 pt-14 sm:w-full sm:h-vh">
-                 <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
+                 <h2 class ="text-primary font-medium text-3xl text-left tracking-wider font-sans">
                      Codex: A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
@@ -458,7 +440,7 @@
         <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
           <section class="text-gray-700 body-font bg-secondary">
             <div class="container px-5 mx-auto">
-              <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold uppercase">Partners</h2>
+              <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-medium uppercase">Partners</h2>
               <div class="md:flex flex-wrap -m-4 lg:mt-16">
                 <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
@@ -496,13 +478,11 @@
 
 
 
-      <!--==================
-       SPOTLIGHT SECTION
-      ==================-->
+      <!--================== SPOTLIGHT SECTION  ==================-->
       <section class="panel">
         <section class="panel spotlight h-screen w-full">
 
-          <h1 class="text-center text-3xl mt-12 uppercase font-sans font-black">Spotlight</h1>
+          <h1 class="text-center text-3xl mt-12 uppercase font-sans font-medium">Spotlight</h1>
 
           <section class="spot-container flex justify-center p-12">
             <!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
@@ -514,14 +494,12 @@
 
 
 
-      <!--==================
-       FOOTER/CONTACT SECTION
-      ==================-->
+      <!--================== FOOTER/CONTACT SECTION ==================-->
       <section class="panel">
 
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center font-medium text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
                 <a class="flex flex-col justify-center" href="/blogs">
                   <button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
