--- a/public/css/panels.css
+++ b/public/css/panels.css
@@ -30,3 +30,18 @@
 #clickHereRight{
   /* margin-left: 130px; */
 }
+
+.videoWrapper{
+  /* position: relative; */
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.videoWrapper iframe{
+  position: absolute;
+  padding: 5%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
