--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -52,17 +52,17 @@
         <!--================== CAREERS INFO SECTION ==================-->
         <section class="panel bg-secondary h-full">
           <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
-              <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
-                <hr class="mt-4 w-1/6 py-2 mb-20">
+              <h1 class="text-left text-4xl font-medium p-4 font-sans">Join Our Team
+                <hr class="mt-4 w-1/4 py-2 mb-20">
               </h1>
-              <section class="bg-secondary grid grid-cols-3 border">
+              <section class="bg-secondary -mt-20 m-4 p-2 grid grid-cols-3 border">
                 <h3 class="w-1/3 col-span-1">Position</h3>
                 <h3 class="w-1/3 col-span-1">Type</h3>
                 <h3 class="w-1/3 col-span-1">Location</h3>
                 <details class="col-span-3 bg-secondary" closed>
                   <summary>Business Development - Internship - Boston, MA</summary>
                   <h4>Business Development Internship</h4>
-                  <p style="color:#7C7C7C;">
+                  <p class="text-base" style="color:#7C7C7C;">
                     VINCI is looking to expand its presence and increase deal flow with its target industries.
                   </p>
                   <p style="color:#7C7C7C;">
@@ -102,12 +102,16 @@
 
 
         <section class="bg-secondary panel">
-           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
-             <div class="flex flex-col justify-center mt-24">
-             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
+             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+             <div class="flex flex-col justify-center mt-20">
+                 <a class="flex flex-col justify-center" href="/blogs">
+                   <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+                 </a>
+                 <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                 <a class="flex flex-col justify-center" href="/contact">
+                   <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                 </a>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
